--- a/index.html
+++ b/index.html
@@ -19,32 +19,20 @@
   </header>
   
   <main>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="https://picsum.photos/800/400?random=1" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://picsum.photos/800/400?random=2" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://picsum.photos/800/400?random=3" alt="Third slide">
-        </div>
+    <div class="carousel-container">
+      <div class="carousel-slide">
+        <img src="https://via.placeholder.com/500x300?text=Slide%201">
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <div class="carousel-slide">
+        <img src="https://via.placeholder.com/500x300?text=Slide%202">
+      </div>
+      <div class="carousel-slide">
+        <img src="https://via.placeholder.com/500x300?text=Slide%203">
+      </div>
+      <button id="prevBtn">Prev</button>
+      <button id="nextBtn">Next</button>
     </div>
+    
     
     <h2>Welcome to my home page!</h2>
     <p>Hi there! My name is [Your Name] and this is my home page. I am a [Your Profession] with [Number] years of experience in [Your Area of Expertise]. Please feel free to take a look at my resume and portfolio to learn more about my skills and experience.</p>
@@ -55,4 +43,4 @@
     <p>Copyright &copy; [Year] [Your Name]</p>
   </footer>
   
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE
+  <script src="Photos.js"></script>
